<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_videostream"
    tools:context=".DetailStream"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/black"
            android:text="@string/name_video_stream"
            android:textSize="32sp"
            android:textStyle="bold"/>


            <TextView
                android:id="@id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_content"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:text="@string/founded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/tv_item_founded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/founded_value"
                        android:textColor="@android:color/black"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:text="@string/founder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/tv_item_founder"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/founder_value"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:text="@string/headquarters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/tv_item_headquarters"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/headquarters_value"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:text="@string/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/darker_gray"/>


                    <TextView
                        android:id="@+id/tv_item_link"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/website_value"
                        android:textColor="@android:color/black"/>

                </TableRow>
            </TableLayout>

    </LinearLayout>

</ScrollView>