<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_marginTop="60dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:src="@android:color/darker_gray"/>
    <TextView
        android:text="@string/name_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:textAlignment="center"/>
    <TextView
        android:text="@string/email_me"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/send_email_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_send_email"
        android:textStyle="bold"/>


</LinearLayout>